RDCC-5417 - Sonar violation fixes